Add holder in get reservation